module/Header/styles/header.module.sass
@import ../../../styles/variables

.header
  display: flex
  justify-content: space-between
  align-items: center
  position: sticky
  top: -.2rem
  background-color: rgba(27, 27, 27, .9)
  padding: 1.125rem 7rem
  display: flex
  justify-content: space-between
  align-items: center
  height: 4rem
  backdrop-filter: blur(.2rem)

.logo
  display: flex
  align-items: center
  color: white
  &Text
    margin-left: 0.625rem
    font-weight: 500
    font-size: 1rem

@media screen and (max-width: 55rem)
  .header
    padding: .375rem 1.25rem

@media screen and (max-width: 35rem)
  .header
    height: 3rem
    padding: 1.5rem 1.25rem

@media screen and (max-width: 27.5rem)
  .header
    padding: 1.875rem 1.25rem

@media screen and (max-width: 21.875rem)
  .header
    padding: 0

